# fastapi_ems

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENV_CONFIG_MAPPING.md  README.md  REQUEST_BODY_GUIDE.md  SQLALCHEMY_GUIDE.md  alembic.ini.example  docker-compose.yml  logging.ini  practices.md  prompt.md  pyproject.toml  requirements.txt  skills-manager-figma.html
.cursor/rules/: markdown.mdc
Mark/: ASYNCIO_GUIDE.md  CODE_REFACTORING_SUMMARY.md  CONFIG_QUICK_REFERENCE.md  ENV_LOADING_FLOWCHART.md  HOW_ENV_LOADING_WORKS.md  IEC61850_MMS_Learning_Guide.md  MODBUS_FLOW.md  MODBUS_LEARNING_GUIDE.md  MODBUS_VERSION_COMPATIBILITY.md  SETUP_GUIDE.md  USER_MODEL_USAGE_GUIDE.md  sqlalchemy_crud_guide.md
html/: skills-manager.html
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
pyModbus/: README.md  run_simulator.py  sim_modbus.py
requirements/: base.txt  dev.txt  prod.txt
src/: __init__.py  config.py  constants.py  database.py  error_handlers.py  main.py  middleware.py  models.py  pagination.py
src/common/: __init__.py  config.py  database.py  error_handlers.py  exceptions.py  models.py  pagination.py  schemas.py
src/crud/: __init__.py  base.py
src/demo/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/iecApi/: IEC61850_MMS_Learning_Guide.md  READING_GUIDE.md  client.py  demo.py  model.py
src/influxApi/: __init__.py  client.py  demo.py  read.md
src/plan/: plan1_influxdb.md
src/projectApi/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_health.py
(+4 files in other folders)
